--- a/GitSubmodules/Mvvm/View/MainView.xaml
+++ b/GitSubmodules/Mvvm/View/MainView.xaml
@@ -2,9 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:ClassModifier="internal"
-             DataContext="{Binding ViewModel,
-                                   Mode=OneWay,
-                                   RelativeSource={RelativeSource Self}}">
+             DataContext="{Binding ViewModel, Mode=OneWay, RelativeSource={RelativeSource Self}}">
 
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
@@ -96,7 +94,6 @@
                     Content="Fetch for all submodules"
                     UseLayoutRounding="False" />
 
-
             <Button Grid.Row="2"
                     Grid.Column="0"
                     Command="{Binding CommandAllUpdate}"
@@ -147,12 +144,12 @@
                      IsEnabled="{Binding Model.ShowWatingIndicator}"
                      IsIndeterminate="{Binding Model.ShowWatingIndicator}"
                      UseLayoutRounding="False"
-                     Visibility="{Binding Model.ShowWatingIndicator,
-                                          Converter={StaticResource BooleanToVisibilityConverter}}" />
+                     Visibility="{Binding Model.ShowWatingIndicator, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
         <ScrollViewer Grid.Row="7"
                       Margin="0,5,0,0"
                       VerticalScrollBarVisibility="Auto">
+
             <ItemsControl Margin="0,0,2,0" ItemsSource="{Binding Model.ListOfSubmodules, Mode=OneWay}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
@@ -161,7 +158,10 @@
                                 BorderBrush="Black"
                                 BorderThickness="1">
 
-                            <Grid Background="{Binding BackgroundColor, Mode=OneWay}">
+                            <Grid Background="{Binding BackgroundColor, Mode=OneWay}"
+                                  MouseEnter="ChangeSubmoduleVisibility"
+                                  MouseLeave="ChangeSubmoduleVisibility"
+                                  Tag="{Binding}">
 
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="5" />
@@ -216,7 +216,7 @@
                                         <Separator />
 
                                         <MenuItem Click="CopyIdToClipboard"
-                                                  Header="Copy Id to clipboard"
+                                                  Header="Copy FullId to clipboard"
                                                   Tag="{Binding}" />
 
                                         <MenuItem Click="CopyTagToClipboard"
@@ -240,8 +240,7 @@
 
                                             <TextBlock FontWeight="Bold"
                                                        Foreground="Black"
-                                                       Text="{Binding Name,
-                                                                      Mode=OneWay}" />
+                                                       Text="{Binding Name, Mode=OneWay}" />
 
                                         </Hyperlink>
                                     </TextBlock>
@@ -250,19 +249,17 @@
 
                                 <StackPanel Grid.Row="1"
                                             Grid.Column="3"
-                                            Margin="0, 0, 0, 5"
+                                            Margin="0,0,0,5"
                                             Orientation="Horizontal">
 
                                     <Button Width="50"
-                                            Command="{Binding DataContext.CommandOneUpdate,
-                                                              RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                            Command="{Binding DataContext.CommandOneUpdate, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                                             CommandParameter="{Binding}"
                                             Content="Update"
                                             UseLayoutRounding="False" />
 
                                     <Button Width="15"
-                                            Command="{Binding DataContext.CommandOneUpdateForce,
-                                                              RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                            Command="{Binding DataContext.CommandOneUpdateForce, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                                             CommandParameter="{Binding}"
                                             Content="F"
                                             UseLayoutRounding="False" />
@@ -275,15 +272,24 @@
                                          Background="Transparent"
                                          BorderThickness="0"
                                          IsReadOnly="True"
-                                         Text="{Binding Id,
-                                                        Mode=OneWay}"
-                                         TextWrapping="WrapWithOverflow" />
+                                         Text="{Binding ShortId, Mode=OneWay}"
+                                         TextWrapping="WrapWithOverflow"
+                                         Visibility="{Binding ShowSlimInformations, Converter={StaticResource BooleanToVisibilityConverter}}" />
+
+                                <TextBox Grid.Row="2"
+                                         Grid.Column="1"
+                                         VerticalAlignment="Center"
+                                         Background="Transparent"
+                                         BorderThickness="0"
+                                         IsReadOnly="True"
+                                         Text="{Binding FullId, Mode=OneWay}"
+                                         TextWrapping="WrapWithOverflow"
+                                         Visibility="{Binding ShowExtendedInformations, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
                                 <Button Grid.Row="2"
                                         Grid.Column="3"
-                                        Margin="0, 0, 0, 5"
-                                        Command="{Binding DataContext.CommandOnePullOriginMaster,
-                                                          RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                        Margin="0,0,0,5"
+                                        Command="{Binding DataContext.CommandOnePullOriginMaster, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                                         CommandParameter="{Binding}"
                                         Content="Pull o/m"
                                         UseLayoutRounding="False" />
@@ -294,40 +300,39 @@
                                          Background="Transparent"
                                          BorderThickness="0"
                                          IsReadOnly="True"
-                                         Text="{Binding CompleteTag,
-                                                        Mode=OneWay}" />
+                                         Text="{Binding CompleteTag, Mode=OneWay}"
+                                         Visibility="{Binding ShowExtendedInformations, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
                                 <Button Grid.Row="3"
                                         Grid.Column="3"
-                                        Margin="0, 0, 0, 5"
-                                        Command="{Binding DataContext.CommandOneInit,
-                                                          RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                        Margin="0,0,0,5"
+                                        Command="{Binding DataContext.CommandOneInit, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                                         CommandParameter="{Binding}"
                                         Content="Init"
-                                        UseLayoutRounding="False" />
+                                        UseLayoutRounding="False"
+                                        Visibility="{Binding ShowExtendedInformations, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
                                 <TextBlock Grid.Row="4"
                                            Grid.Column="1"
                                            VerticalAlignment="Center"
-                                           Text="{Binding StatusText,
-                                                          Mode=OneWay}"
-                                           TextTrimming="CharacterEllipsis" />
+                                           Text="{Binding StatusText, Mode=OneWay}"
+                                           TextTrimming="CharacterEllipsis"
+                                           Visibility="{Binding ShowExtendedInformations, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
                                 <StackPanel Grid.Row="4"
                                             Grid.Column="3"
-                                            Margin="0, 0, 0, 5"
-                                            Orientation="Horizontal">
+                                            Margin="0,0,0,5"
+                                            Orientation="Horizontal"
+                                            Visibility="{Binding ShowExtendedInformations, Converter={StaticResource BooleanToVisibilityConverter}}">
 
                                     <Button Width="50"
-                                            Command="{Binding DataContext.CommandOneDeinit,
-                                                              RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                            Command="{Binding DataContext.CommandOneDeinit, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                                             CommandParameter="{Binding}"
                                             Content="Deinit"
                                             UseLayoutRounding="False" />
 
                                     <Button Width="15"
-                                            Command="{Binding DataContext.CommandOneDeinitForce,
-                                                              RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                            Command="{Binding DataContext.CommandOneDeinitForce, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                                             CommandParameter="{Binding}"
                                             Content="F"
                                             UseLayoutRounding="False" />
