--- a/GitSubmodules/Mvvm/View/MainView.xaml
+++ b/GitSubmodules/Mvvm/View/MainView.xaml
@@ -158,8 +158,7 @@
                                 BorderThickness="1">
 
                             <Grid Background="{Binding BackgroundColor, Mode=OneWay}"
-                                  MouseEnter="ChangeSubmoduleVisibility"
-                                  MouseLeave="ChangeSubmoduleVisibility"
+                                  MouseEnter="ExpandOneSubmodule"
                                   Tag="{Binding}">
 
                                 <Grid.ColumnDefinitions>
